# High-Performance-Time-Series-Data-Processor

./: .gitignore  CMakeLists.txt  IMPLEMENTATION.md  LICENSE  QUICKSTART.md  README.md  build.sh  build_manual.sh  examples.sh  validate.sh
.github/workflows/: build.yml
data/: sample.csv
include/: csv_reader.hpp  indicators.hpp  io.hpp  record.hpp  signals.hpp  timeseries.hpp
src/: csv_reader.cpp  indicators.cpp  io.cpp  main.cpp  signals.cpp  timeseries.cpp
tests/: test_csv_reader.cpp  test_indicators.cpp  test_io.cpp  test_signals.cpp
tools/: gen_synthetic.py
